--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="author" content="">
 	<title>JavaScript Third-Party APIs Activity</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
+	<script type="text/javascript" src="scripts.js" async></script>
 </head>
 <body>
 	<header>
@@ -30,6 +31,5 @@
 		<p>Copyright &copy; 2023</p>
 		<p>This site is for educational purposes only</p>
 	</footer>
-	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
